logo alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@ header {
   margin-bottom: 15px
 }
 
+.headerText{
+  display: flex;
+  align-items: center;
+}
+
 header .headerText div{
   font-size: 30px;
   font-family: "Audiowide", sans-serif;
